Ensuring button formatters have correct spacing and display
Display should be inline-block and the margin spacing 0 1rem 1rem 0 no matter whether the formatter has been applied to the p tag or the span tag and no matter where the span tag appears in the p tag

--- a/University/Admin assets/CSS/build-uhi-main.css
+++ b/University/Admin assets/CSS/build-uhi-main.css
@@ -4474,8 +4474,13 @@ main .text-image-black.flexwrap .speal-right .UHI--button-link--yellow a:visited
 p:has(span.UHI--button-link--black),
 p:has(span.UHI--button-link--main),
 p:has(span.UHI--button-link--reverse),
-p:has(span.UHI--button-link--yellow) {
+p:has(span.UHI--button-link--yellow),
+p:has(a span.UHI--button-link--black),
+p:has(a span.UHI--button-link--main),
+p:has(a span.UHI--button-link--reverse),
+p:has(a span.UHI--button-link--yellow) {
   display: inline-block;
+  margin: 0 1rem 1rem 0;
 }
 
 /* border on image */
